--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 test-webhook">
         <h2>Application Info</h2>
         <div data-template="config:app-info"/>
     </div>
